added windows kernel 5 config, updated kernel 6 config

--- a/survey_5.cfg
+++ b/survey_5.cfg
@@ -1,4 +1,4 @@
-# Configuration file for 6.X Windows kernels
+# Configuration file for 5.X Windows kernels
 # Use # to comment out lines
 # Blank lines are ignored
 # [include in batch file] ; [friendly name] ; [actual windows command] ; [file to save output to]
@@ -32,10 +32,12 @@ y;netstat -es;netstat -es;netstat_es.txt
 y;netstat routes;netstat -nr;netstat_nr.txt
 y;routes;route print;routes.txt
 y;hosts file;type c:\windows\system32\drivers\etc\hosts;hosts.txt
-y;advfirewall profiles;netsh advfirewall show allprofiles;firewall_settings.txt 
+y;firewall opmode;netsh firewall show opmode;netsh_firewall_opmode.txt
+y;firewall port opening;netsh firewall show portopening;netsh_firewall_portopening.txt
+y;firewall config;netsh firewall show config;netsh_firewall_config.txt
 y;domain firewall global open ports;reg query "hklm\software\policies\microsoft\windowsfirewall\domainprofile\globallyopenports\list";domain_fw_global_ports.txt
 y;domain firewall rules;reg query "hklm\software\policies\microsoft\windowsfirewall\firewallrules";domain_fw_rules.txt
-y;pfirewall log;type c:\windows\system32\LogFiles\Firewall\pfirewall.log;pfirewall.txt
+y;pfirewall log;type c:\windows\pfirewall.log;pfirewall.txt
 
 # Users and accounts
 y;net user;net user;net_user.txt 
@@ -56,7 +58,7 @@ y;services information;wmic service get caption, description, displayname, name,
 y;registry services;reg query "hklm\system\currentcontrolset\services";registry_services.txt
 y;loaded drivers;wmic sysdriver get caption, description, displayname, name, pathname, servicetype, started, startmode, state /format:rawxml;loaded_drivers.xml
 y;drivers folder;dir /a c:\windows\system32\drivers;drivers_folder_on_disk.txt
-y;all drivers;where /t /r c:\ *.sys *.drv | findstr /i /v "c:\\hiberfil.sys c:\\pagefile.sys";all_drivers_folder_on_disk.txt
+y;all drivers;dir /s /a /b c:\ | findstr /i "\.drv$ \.sys$";all_drivers_folder_on_disk.txt
 
 # Persistent mechanisms
 y;load order;wmic loadorder;loadorder.txt
@@ -69,7 +71,7 @@ y;runonceex key;reg query "hklm\software\microsoft\windows\currentversion\runonc
 y;current user run key;reg query "hkcu\software\microsoft\windows\currentversion\run";run_hkcu.txt
 y;current user runonce key;reg query "hkcu\software\microsoft\windows\currentversion\runonce";runonce_hkcu.txt
 y;appinit key;reg query "hklm\software\microsoft\windows nt\currentversion\windows" /v appinit_dlls;appinit.txt
-y;all users startup 6;dir /od /a "c:\programdata\microsoft\windows\startm~1\programs\startup";all_user_startup_6.txt
+y;all users startup 5;dir /od /a "c:\docume~1\alluse~1\startm~1\programs\startup";all_user_startup_5.txt
 y;group policy logoff scripts;reg query "hkcu\software\microsoft\windows\currentversion\group policy\scripts\logoff" /s;group_logoff_scripts.txt
 y;group policy logon scripts;reg query "hkcu\software\microsoft\windows\currentversion\group policy\scripts\logon" /s;group_logon_scripts.txt
 y;group logon and logoff script directory;dir /s /a /od "c:\windows\system32\grouppolicy\user\scripts";group_logon_logoff_script_dir.txt
@@ -87,7 +89,7 @@ y;winlogon userinit;reg query "hklm\software\microsoft\windows nt\currentversion
 y;winlogon vmapplet;reg query "hklm\software\microsoft\windows nt\currentversion\winlogon" /v vmapplet;winlogon_vmapplet.txt
 y;winlogon shell;reg query "hklm\software\microsoft\windows nt\currentversion\winlogon" /v shell;winlogon_shell.txt
 y;bootexecute;reg query "hklm\system\currentcontrolset\control\session manager" /v bootexecute;bootexecute.txt
-y;uihost;reg query "hklm\software\microsoft\windows nt\currentversion\winlogon\uihost";uihost.txt
+y;uihost;reg query "hklm\software\microsoft\windows nt\currentversion\winlogon" /v uihost;uihost.txt
 y;print monitors;reg query "hklm\system\currentcontrolset\control\print\monitors" /s;print_monitors.txt
 y;wmic startup;wmic startup list /format:rawxml;startup_list.xml
 y;all users startup;dir /od /a "c:\programdata\microsoft\windows\startm~1\programs\startup";all_user_startup.txt
@@ -108,7 +110,7 @@ y;rdp startup programs;reg query "hklm\system\currentcontrolset\control\terminal
 y;rdpwd startupprograms;reg query "hklm\system\currentcontrolset\control\terminal server\wds\rdpwd" /v startupprograms;rdpwd_startupprograms.txt
 
 # USB info
-y;portable devices;reg query "hklm\software\microsoft\windows portable devices\devices";portable_devices.txt
+n;usb store;reg query "hklm\system\currentcontrolset\enum\usbstor";usbstor.txt
 y;usb;reg query "hklm\system\currentcontrolset\enum\usb" /s;usb.txt
 
 # Misc
