Updated .cfg files to output csv format for wmic

--- a/survey_5.cfg
+++ b/survey_5.cfg
@@ -12,7 +12,8 @@ y;prefetch;dir /od /a c:\windows\prefetch;dir_prefetch.txt
 y;systeminfo;systeminfo;systeminfo.txt
 
 # Process info
-y;process list;wmic process get parentprocessid, processid, sessionid, description, commandline, executablepath /format:rawxml;process_list.xml
+y;process list;wmic process get parentprocessid, processid, sessionid, description, commandline, executablepath /format:csv;process_list.txt
+n;process list;wmic process get parentprocessid, processid, sessionid, description, commandline, executablepath /format:rawxml;process_list.xml
 y;tasklist;tasklist;tasklist.txt
 y;tasklist modules (dlls);tasklist /m;tasklist_m.txt
 y;tasklist services;tasklist /svc;tasklist_svc.txt
@@ -54,9 +55,11 @@ y;net session;net session;net_session.txt
 
 # Services and drivers
 y;sc query;sc query;sc_query.txt
-y;services information;wmic service get caption, description, displayname, name, pathname, processid, started, startmode, startname, state /format:rawxml;services.xml
+y;services information;wmic service get caption, description, displayname, name, pathname, processid, started, startmode, startname, state /format:csv;services.txt
+n;services information;wmic service get caption, description, displayname, name, pathname, processid, started, startmode, startname, state /format:rawxml;services.xml
 y;registry services;reg query "hklm\system\currentcontrolset\services";registry_services.txt
-y;loaded drivers;wmic sysdriver get caption, description, displayname, name, pathname, servicetype, started, startmode, state /format:rawxml;loaded_drivers.xml
+y;loaded drivers;wmic sysdriver get caption, description, displayname, name, pathname, servicetype, started, startmode, state /format:csv;loaded_drivers.txt
+n;loaded drivers;wmic sysdriver get caption, description, displayname, name, pathname, servicetype, started, startmode, state /format:rawxml;loaded_drivers.xml
 y;drivers folder;dir /a c:\windows\system32\drivers;drivers_folder_on_disk.txt
 y;all drivers;dir /s /a /b c:\ | findstr /i "\.drv$ \.sys$";all_drivers_folder_on_disk.txt
 
@@ -91,7 +94,8 @@ y;winlogon shell;reg query "hklm\software\microsoft\windows nt\currentversion\wi
 y;bootexecute;reg query "hklm\system\currentcontrolset\control\session manager" /v bootexecute;bootexecute.txt
 y;uihost;reg query "hklm\software\microsoft\windows nt\currentversion\winlogon" /v uihost;uihost.txt
 y;print monitors;reg query "hklm\system\currentcontrolset\control\print\monitors" /s;print_monitors.txt
-y;wmic startup;wmic startup list /format:rawxml;startup_list.xml
+y;wmic startup;wmic startup list /format:csv;startup_list.txt
+n;wmic startup;wmic startup list /format:rawxml;startup_list.xml
 y;all users startup;dir /od /a "c:\programdata\microsoft\windows\startm~1\programs\startup";all_user_startup.txt
 
 # Internet and proxy info
